package co.edu.udistrital.mdp.eventos.dto.bookingdto;

import lombok.Data;

@Data
public class BookingDTO {
    private Integer id;
    private Integer remainingSeats;
}
