package co.edu.udistrital.mdp.eventos.dto.bookingdto;

import lombok.Data;

@Data
public class BookingDetailDTO extends BookingDTO {
    
}
