package co.edu.udistrital.mdp.eventos.dto.bookingdto;
import lombok.Data;

@Data
public class NotificationDTO {
    private Integer id;
    private String description;
}
