package co.edu.udistrital.mdp.eventos.dto.bookingdto;
import lombok.Data;

@Data
public class PurchaseDTO {
    private Integer id;
    private Integer remainingSeats;
}
