package co.edu.udistrital.mdp.eventos.dto.bookingdto;

import java.util.Date;
import lombok.Data;

@Data
public class RefundDTO {
    private Integer id;
    private Date date;
}
