package co.edu.udistrital.mdp.eventos.dto.eventdto;

public class ResourceDetailDTO {

}
