package co.edu.udistrital.mdp.eventos.dto.paymentdto;

import lombok.Data;

@Data
public class DebitCardDTO extends CardDTO {

}
