package co.edu.udistrital.mdp.eventos.dto.paymentdto;

import lombok.Data;

@Data
public class MethodOfPaymentDTO {
    private Long id;
    private String type;
}
