package co.edu.udistrital.mdp.eventos.dto.paymentdto;

public class MethodOfPaymentDetailDTO extends MethodOfPaymentDTO {

}
