package co.edu.udistrital.mdp.eventos.dto.userdto;

public class OrganizerDTO {

}
