package co.edu.udistrital.mdp.eventos.dto.userdto;

import lombok.Data;

@Data
public class PreferenceDTO {
    private Long id;
    private String description;
}
